--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metaphor-theme",
-  "version": "2.0.2",
+  "version": "2.0.4",
   "description": "CSUN-branded Bootstrap 4 theme",
   "repository": "https://github.com/HackerThemes/theme-kit",
   "main": "index.js",
@@ -13,11 +13,13 @@
   ],
   "author": "META+LAB",
   "license": "MIT",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
+    "@fortawesome/free-brands-svg-icons": "^5.0.13",
+    "@fortawesome/free-regular-svg-icons": "^5.0.13",
+    "@fortawesome/free-solid-svg-icons": "^5.0.13"
+  },
   "bundledDependencies": [
-    "@fortawesome/fontawesome-free",
-    "@fortawesome/free-brands-svg-icons",
-    "@fortawesome/free-regular-svg-icons",
-    "@fortawesome/free-solid-svg-icons",
     "bootstrap",
     "jquery",
     "popper.js"
